# crystal-battle

./: .gitignore  README.md  architecture.md  cloud_setup.sh  dashboard.py  eval_history_old.csv  eval_log.txt  live_metrics.csv  offline_rl.py  policy_net.onnx  pretrain_simple.py  requirements.txt
crystal_engine/: Cargo.toml  pyproject.toml
crystal_engine/benches/: sim_bench.rs
crystal_engine/src/: actions.rs  batch.rs  batch_nn.rs  battle.rs  damage.rs  data.rs  events.rs  lib.rs  moves.rs  obs.rs  player.rs  pokemon.rs  pybridge.rs  search.rs  stat_stages.rs  status.rs  turn_engine.rs  types.rs
crystal_engine/tests/: basic_battle.rs
data/: fetch_data.py  moves.json  pokemon.json  type_chart.json
engine/: __init__.py  actions.py  battle_state.py  damage.py  data_loader.py  events.py  move.py  player_state.py  pokemon.py  stat_stages.py  status.py  turn_engine.py  types.py
gym_env/: __init__.py  battle_env.py  hindsight_wrapper.py  obs_builder.py  reward.py  team_builder.py
monotype/: analyze_trace.py  blunder_audit.py  canonical_sets.py  chaos_priors.py  compare_bench_vs_smogon.py  depth_regret.py  endgame_solver.py  eval_blindspot.py  extract_lead_training_data.py  extract_move_training_data.py  extract_move_training_data_v2.py  featurizer_lead_preview.py  featurizer_move_state.py  forced_play.py  heuristics.py  lead_net.py  lead_optimizer.py  lead_picker.py  lead_sweep.py  move_net.py  move_net_infer.py  puct_search.py  rebuild_ab.py  selfplay_az_round.py  selfplay_checkpoints.py  setup_dive.py  setup_freq.py  trace_match.py  train_lead_net.py  (+3 more)
(+981 files in other folders)
