[package]
name = "crystal_engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "crystal_engine_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
rand = "0.9"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "sim_bench"
harness = false
